--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="gst1-java-core-0.9-161201.jar"/>
-	<classpathentry kind="lib" path="jna-4.2.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="gst1-java-core-0.9-161201.jar"/>
+	<classpathentry exported="true" kind="lib" path="jna-4.2.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
